tests/e2e/complex_nested_expression14.error
Error: syntax error in story at line 2, column 7

2|    a = ((0 == 1)) + (d["a"])
            ^^^^^^^^^^^^^^^^^

E0103: `+` between `boolean` and `int` is not supported.
