tests/e2e/complex_nested_expression14.story
d = {"a": 2}
a = ((0 == 1)) + (d["a"])
